# ai-layer

./: .env_template  .gitignore  README.md  pyproject.toml
ai_layer/: __init__.py  models.py  models_aws.py  models_azure.py  models_gcp.py  nosql.py  sql.py  vector.py  vector_chroma.py  vector_weaviate.py  weaviate_config.py
tests/: test_model.py
