[tool.poetry]
name = "ai_layer"
version = "0.1.0"
description = "An LLM abstraction layer for LangServe applications"
authors = ["Mike Torchia <skippy107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.2.1"
langchain-core = "^0.2.2"
langchain-community = "^0.2.1"

# uncomment for AzureOpenAI
langchain-openai = "^0.1.8"

# uncomment to use GCP models
# langchain-google-vertexai = "^1.0.4"
# google-cloud-aiplatform = "^1.52.0"

# uncomment for AWS Bedrock
# langchain-aws = "^0.1.6"
# boto3 = "^1.34.129"

# for Postgres SQL
psycopg2-binary = "^2.9.9"

# uncomment for Weaviate
#weaviate-client = "^4.6.3"

# uncomment for Chroma
chromadb = "^0.5.3"

redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
langchain-cli = "^0.0.24"
fastapi = "^0.111.0"
sse-starlette = "^2.1.0"
# pytest = "^8.2.1"
# pytest-mock = "^3.14.0"

[tool.langserve]
export_module = "ai_layer"
export_attr = "chain"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
